alignment fix

--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -60,3 +60,14 @@
     }
   }
 }
+
+img[src*='#left'] {
+    float: left;
+}
+img[src*='#right'] {
+    float: right;
+}
+img[src*='#center'] {
+    display: block;
+    margin: auto;
+}
